# imessage-react

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  server.ts
agent_service/: README.md  agent.py  calendar_tools.py  chat_style.py  client.py  config.py  main.py  memory.py  next_client.py  orchestrator.py  pyproject.toml  runs.py  schemas.py
agent_service/agent_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: layout.tsx  tiptap.css
app/api/chats/: route.ts
app/api/chats/[chatId]/: route.ts
app/api/chats/[chatId]/messages/: route.ts
app/api/chats/[chatId]/read/: route.ts
app/api/internal/agent/events/: route.ts
components/: app.tsx  chat-area.tsx  chat-header.tsx  conversation-item.tsx  message-bubble.tsx  message-input.tsx  message-list.tsx  nav.tsx  sidebar.tsx  silenced-notifications-message.tsx
config/: site.ts
data/: initial-contacts.ts  initial-conversations.ts
docs/: chat-api.md  frontend.md
lib/: chat-adapters.ts  sound-effects.ts
lib/client/: realtime.ts
lib/server/: agent-runtime.ts  models.ts  store.ts  ws-hub.ts
types/: index.ts  realtime.ts
