[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "composio>=0.11.5",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.31.0",
    "openai-agents>=0.13.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]

# Map project root onto the import name `agent_service` (uv project dir is also named agent_service).
[tool.setuptools]
package-dir = { "agent_service" = "." }
packages = ["agent_service"]
